--- a/client/package.json
+++ b/client/package.json
@@ -3,16 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome": "^1.1.8",
-    "@fortawesome/fontawesome-free-solid": "^5.0.13",
     "@fortawesome/fontawesome-svg-core": "^1.2.12",
     "@fortawesome/free-solid-svg-icons": "^5.6.3",
     "@fortawesome/react-fontawesome": "^0.1.3",
-    "@material-ui/core": "1.5.1",
+    "@material-ui/core": "^3.8.3",
     "axios": "^0.18.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-dropzone": "^8.0.3",
+    "react-dropzone": "4.2.12",
     "react-images": "^0.5.19",
     "react-moment": "^0.8.4",
     "react-paypal-express-checkout": "^1.0.5",
