--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "2.0.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "1.18.3",
     "cloudinary": "1.11.0",
     "concurrently": "3.6.0",
     "cookie-parser": "1.4.3",
+    "crypto-js": "^3.1.9-1",
     "dotenv": "6.0.0",
     "express": "4.16.3",
     "express-formidable": "1.0.0",
