--- a/client/package.json
+++ b/client/package.json
@@ -8,16 +8,20 @@
     "@fortawesome/react-fontawesome": "^0.1.3",
     "@material-ui/core": "^3.8.3",
     "axios": "^0.18.0",
+    "bootstrap": "^4.2.1",
+    "bootstrap-social": "^5.1.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-dropzone": "4.2.12",
     "react-images": "^0.5.19",
     "react-moment": "^0.8.4",
     "react-paypal-express-checkout": "^1.0.5",
+    "react-popper": "^1.3.2",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
     "react-slick": "^0.23.2",
+    "reactstrap": "^7.1.0",
     "redux": "^4.0.1",
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.3.0"
