--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "server": "nodemon server/server.js",
     "client": "npm run start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild":  "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "engines": {
     "node": "8.11.3"
@@ -29,7 +29,7 @@
     "express-formidable": "1.0.0",
     "jsonwebtoken": "8.3.0",
     "moment": "2.22.2",
-    "mongoose": "5.1.6",
+    "mongoose": "^5.4.6",
     "multer": "1.3.0",
     "nodemailer": "^4.6.7"
   }
