--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-dropzone": "4.2.12",
     "react-images": "^0.5.19",
     "react-moment": "^0.8.4",
+    "react-notify-toast": "^0.5.0",
     "react-paypal-express-checkout": "^1.0.5",
     "react-popper": "^1.3.2",
     "react-redux": "^6.0.0",
